@@ -105,38 +105,35 @@
 #second-column = yes
 
 ############## Colors #######################
+## colors: none, black, red, green, yellow, blue, magenta, cyan, white
+## attributes: standout, underline, reverse, blink, dim, bold
 ##
-## base colors: black, red, green, yellow, blue, magenta, cyan, white
-##
+## Colors can also be given as an integer representing a terminal specific
+## color code. The special color, none, represents the terminals default color.
 
 ## Enable/disable colors.
 #enable-colors = no
 
-## Set the background color. If the background color is assigned
-## to the keyword none, ncmpc will not change the background color.
+## Set the background color.
 #color background = black
-
-## text colors: black, red, green, yellow, blue, magenta, cyan, white,
-##              brightblack, brightred, brightgreen, brightyellow, brightblue,
-##              brightmagenta, brightcyan, brightwhite
 
 ## Set the text color for the title row.
 #color title = yellow
 
 ## Set the text color for the title row (the bold part).
-#color title-bold = brightyellow
+#color title-bold = yellow,bold
 
 ## Set the color of the line on the second row.
 #color line = white
 
 ## Set the text color used to indicate mpd flags on the second row.
-#color line-flags = brightwhite
+#color line-flags = white,bold
 
 ## Set the text color in the main area of ncmpc.
 #color list = green
 
 ## Set the bold text color in the main area of ncmpc.
-#color list-bold = brightgreen
+#color list-bold = green,bold
 
 ## Sets the text color of directories in the browser
 #color browser-directory = yellow
@@ -148,7 +145,7 @@
 #color progressbar = white
 
 ## Set the text color used to display mpd status in the status window.
-#color status-state = brightyellow
+#color status-state = yellow,bold
 
 ## Set the text color used to display song names in the status window.
 #color status-song  = yellow
@@ -157,7 +154,7 @@
 #color status-time  = red
 
 ## Text color used to display alerts in the status window.
-#color alert = brightred
+#color alert = red,bold
 
 ## Redefine any of the base colors.
 ## The RGB values must be an integer value between 0 and 1000.
